Fix spacing on mobile for the cities list

--- a/css/styles.css
+++ b/css/styles.css
@@ -107,8 +107,8 @@ a {
 	text-align: center;
 }
 .cities li {
-	display: inline;
-	padding: 0 14px;
+	display: inline-block;
+	padding: 5px 8px;
 	font-size: 24px;
 	text-transform: uppercase;
 }
